correct bg image on mobiles

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,9 +20,12 @@ body.index .intro{
 }
 
 body.contact, body.contact-form-submitted, body.statement, body.events {
-    background-image: linear-gradient(rgb(255, 255, 255), rgba(255, 255, 255, 0.52)), url("../img/environments.jpg");
-    background-attachment: fixed !important; /* fix image*/
+  background-image: linear-gradient(rgb(255, 255, 255), rgba(255, 255, 255, 0.52)), url("../img/environments.jpg");
+  background-attachment: fixed;
+  height: 100%;
 }
+
+
 
 .album {
   padding: 100px;
@@ -213,12 +216,12 @@ body.works p {
 }
 
 .btn-light {
-    background-color: #efefef;
+  background-color: #efefef;
 }
 
 a.btn {
-    margin-right: 10px;
-    margin-left: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 
@@ -258,19 +261,19 @@ body.works .footer {
 }
 
 .portfolio-block.contact {
-    padding-top: 75px;
-    padding-bottom: 0px;
+  padding-top: 75px;
+  padding-bottom: 0px;
 }
 
 body.contact-form-submitted .portfolio-block.contact {
-    padding-top: 200px;
+  padding-top: 200px;
 }
 
 .portfolio-block form {
-    max-width: 650px;
-    padding: 20px;
-    margin: auto;
-    box-shadow: 0 2px 10px rgba(0,0,0,.1);
+  max-width: 650px;
+  padding: 20px;
+  margin: auto;
+  box-shadow: 0 2px 10px rgba(0,0,0,.1);
 }
 
 /* MOBILES */
@@ -302,9 +305,13 @@ body.contact-form-submitted .portfolio-block.contact {
     display: none;
   }
 
-
-body.index .bg-light {
+  body.index .bg-light {
     background-color: #eaeceb!important;
+  }
+
+  html.contact, html.contact-form-submitted, html.statement, html.events {
+    background-image: linear-gradient(rgb(255, 255, 255), rgba(255, 255, 255, 0.52)), url("../img/environments.jpg");
+    height: 100%;
   }
 }
 
@@ -316,6 +323,6 @@ body.index .bg-light {
 
 @media only screen and (max-width: 1000px){
   .card.quote.statement p, .card.quote.events p {
-      padding: 0;
-    }
+    padding: 0;
+  }
 }
